--- a/web/style.css
+++ b/web/style.css
@@ -1,55 +1,61 @@
 .cell {
-    border: 1px solid #ccc;
+    box-shadow: 0 0 0 2px hsl(210, 100%, 70%) inset;
+    border-radius: 10px;
     aspect-ratio: 1;
     width: 40px;
     text-align: center;
     align-content: center;
+    margin: 1px;
+    color: hsl(210, 100%, 70%);
+    cursor: pointer;
 }
 
 .cell-hovered {
-    background-color: #E0E0E0;
-    transition: background-color 0.4s;
+    color: hsl(0, 0%, 80%);
+    box-shadow: 0 0 0 2px hsl(0, 0%, 80%) inset;
+    transition: color 0.2s;
 }
 .cell-marked-correct.cell-hovered {
-    background-color: hsl(120, 75%, 45%);
+    color: hsl(120, 75%, 45%);
 }
 .cell-marked-wrong.cell-hovered {
-    background-color: hsl(0, 100%, 70%);
+    color: hsl(0, 100%, 70%);
 }
 
 .cell-marked-correct {
-    background-color: hsl(120, 75%, 40%);
-    color: white;
+    color: hsl(120, 75%, 40%);
+    box-shadow: 0 0 0 2px hsl(120, 75%, 40%) inset;
+    border-radius: 10px;
 }
 
 .cell-marked-wrong {
-    background-color: hsl(0, 100%, 65%);
-    color: white;
-}
-
-.cell-unmarked {
-    background-color: white;
-    color: black;
+    color: hsl(0, 100%, 65%);
+    box-shadow: 0px 0 0 2px hsl(0, 100%, 65%) inset;
+    border-radius: 10px;
 }
 
 .result-cell-right {
-    border: 1px solid #ccc;
-    border-left: 2px solid #ccc;
+    margin-left: 15px;
+    color: hsl(0, 0%, 80%);
+    box-shadow: 0 0 0 2px hsl(210, 100%, 80%) inset;
 }
 
 .result-cell-bottom {
-    border: 1px solid #ccc;
-    border-top: 2px solid #ccc;
+    margin-top: 15px;
+    color: hsl(0, 0%, 80%);
+    box-shadow: 0 0 0 2px hsl(210, 100%, 80%) inset;
 }
 
 .result-cell-correct {
-    background-color: hsl(140, 100%, 60%);
-    color: white;
+    color: hsl(120, 75%, 40%);
+    box-shadow: 0 0 0 2px hsl(120, 75%, 40%) inset;
+    border-radius: 10px;
 }
 
 .result-cell-wrong {
-    background-color: hsl(0, 100%, 60%);
-    color: white;
+    color: hsl(0, 100%, 65%);
+    box-shadow: 0px 0 0 2px hsl(0, 100%, 65%) inset;
+    border-radius: 10px;
 }
 
 .row {
@@ -68,4 +74,9 @@
     display: inline-block;
     width: fit-content;
     margin-top: 20px;
+}
+
+body {
+    background-color: #181818;
+    color: #ffbd2f;
 }
