--- a/web/style.css
+++ b/web/style.css
@@ -95,3 +95,20 @@ body {
     background-color: #181818;
     color: #ffbd2f;
 }
+
+.blurred {
+    filter: blur(5px);
+    pointer-events: none;
+}
+
+#start-button {
+    display: block;
+    margin: 20px auto 0 auto;
+    padding: 10px 20px;
+    font-size: 1em;
+    background-color: #ffbd2f;
+    color: #181818;
+    border: 5px solid #181818;
+    border-radius: 5px;
+    cursor: pointer;
+}
