add user-select property to prevent text selection on cells

--- a/web/style.css
+++ b/web/style.css
@@ -8,6 +8,9 @@
     margin: 1px;
     color: hsl(210, 100%, 70%);
     cursor: pointer;
+
+    /* Prevent text selection */
+    user-select: none;
 }
 
 .cell-hovered {
